Tests/Runtime2/Error/GoalFirst/.build/goalfirsthandler.pr
[
  {
    "name": "GoalFirstHandler",
    "description": "Sets the variable %goalFirstHandled% to true as the GoalFirstHandler step action.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "set %goalFirstHandled% = true",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%goalFirstHandled%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": true,
                "type": "bool"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/GoalFirstHandler.goal",
    "prPath": "/.build/goalfirsthandler.pr",
    "hash": "2b7ff65f48a8799450de40bf1ac28c41b8556607bbbc18e685f8f69d90ab6108",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]